--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
                             <a class="nav-link" href="projects.html">Projects</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="clients.html">Clients</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="#">Services</a>
                         </li>
                         <li class="nav-item">
@@ -70,11 +73,11 @@
                         
                     </div>
                     <div class="col-md-9">
-                        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                        <div id="mainSLider" class="carousel slide" data-ride="carousel">
                             <ol class="carousel-indicators">
-                                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active">01</li>
-                                <li data-target="#carouselExampleIndicators" data-slide-to="1">02</li>
-                                <li data-target="#carouselExampleIndicators" data-slide-to="2">03</li>
+                                <li data-target="#mainSLider" data-slide-to="0" class="active">01</li>
+                                <li data-target="#mainSLider" data-slide-to="1">02</li>
+                                <li data-target="#mainSLider" data-slide-to="2">03</li>
                             </ol>
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
@@ -87,11 +90,11 @@
                                     <img class="d-block w-100" src="assets/img/img_header.png" alt="Third slide">
                                 </div>
                             </div>
-                            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                            <a class="carousel-control-prev" href="#mainSLider" role="button" data-slide="prev">
                                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                 <span class="sr-only">Previous</span>
                             </a>
-                            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                            <a class="carousel-control-next" href="#mainSLider" role="button" data-slide="next">
                                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                 <span class="sr-only">Next</span>
                             </a>
