--- a/clients.html
+++ b/clients.html
@@ -88,7 +88,7 @@
             </div>
         </section>
        
-        <section class="ourTeam">
+        <section class="ourTeam" style="padding-bottom: 10rem;">
             <div class="container  position-relative">
                 <div class="row">
                     <div class="col-md-2 ">
