--- a/projects.html
+++ b/projects.html
@@ -60,7 +60,7 @@
 
                     <div class="col-md-4 coreValues">
                         <!-- <h2 class="themeColor">02</h2> -->
-                        <h4><span class="themeColor">02</span>Our Services & Projects</h4>
+                        <h4><span class="themeColor">03</span> Our Services & Projects</h4>
 
                         <ul id="myBtnContainer">
                             <li class="clicks act" onclick="filterSelection('all')">ALL CATEGORIES</li>
@@ -79,116 +79,139 @@
 
 
                     <div class="col-md-8">
-                        <h2>Projects</h2>
+                        <h2>OUR SERVICES</h2>
 
-                        <div class="row feat-works filterDiv graphic vehcle awards">
+                        <div class="row feat-works filterDiv graphic">
                             <div class="col-md-5">
-                                <img src="assets/img/img_header.png" alt="">
+                                <img src="assets/img/baby.png" alt="">
                             </div>
                             <div class="col-md-6 f-workDetails">
-                                <h4 class="keySkills">KEY SKILLS</h4>
-                                <h3 class="f-work-head">Uncompromising Quality</h3>
-                                <p class="f-work-desc">Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui
-                                dolorem.</p>
-                                <a href=""><i class="fas fa-times"></i> Find Out More</a>
+                                <!-- <h4 class="keySkills">KEY SKILLS</h4> -->
+                                <h3 class="f-work-head">Graphic Designing</h3>
+                                <p class="f-work-desc">Our approach to design is quite simple - create engaging visual stories that bring brands and their audience together
+                                and have them interact with each other.</p>
+                                <!-- <a href=""><i class="fas fa-times"></i> Find Out More</a> -->
                             </div>
                         </div>
 
-                        <div class="row feat-works filterDiv digital product">
+                        <div class="row feat-works filterDiv digital">
                             <div class="col-md-5">
                                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTlm74zQGPmohhrxY9tFePTiqdbKk_RMcqkQw&usqp=CAU" alt="">
                             </div>
                             <div class="col-md-6 f-workDetails">
-                                <h4 class="keySkills">KEY SKILLS</h4>
-                                <h3 class="f-work-head">Experts In Advertising</h3>
-                                <p class="f-work-desc">Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae
-                                    consequatur, vel illum qui
-                                    dolorem.</p>
-                                <a href=""><i class="fas fa-times"></i> Find Out More</a>
+                                <!-- <h4 class="keySkills">KEY SKILLS</h4> -->
+                                <h3 class="f-work-head">Digital Printing</h3>
+                                <p class="f-work-desc">When quality output and quick turnaround are critical, think of us. Whether it is a brochure or a business card or a
+                                flyer, we design, print and deliver at your doorsteps.</p>
+                                <!-- <a href=""><i class="fas fa-times"></i> Find Out More</a> -->
                             </div>
                         </div>
+                        
 
-                        <div class="row feat-works filterDiv events led acrylic">
+                        <div class="row feat-works filterDiv events">
                             <div class="col-md-5">
-                                <img src="https://onboard.thalesgroup.com/assets/formation-et-digital-learning-1024x506.jpg" alt="">
+                                <img src="assets/img/banner2.jpeg" alt="">
                             </div>
                             <div class="col-md-6 f-workDetails">
-                                <h4 class="keySkills">KEY SKILLS</h4>
-                                <h3 class="f-work-head">Full Fledged Btl Advertising Firm</h3>
-                                <p class="f-work-desc">Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae
-                                    consequatur, vel illum qui
-                                    dolorem.</p>
-                                <a href=""><i class="fas fa-times"></i> Find Out More</a>
+                                <!-- <h4 class="keySkills">KEY SKILLS</h4> -->
+                                <h3 class="f-work-head">Events & Exhibitions</h3>
+                                <p class="f-work-desc">Exhibitions and events are great ways to showcase your products/services to the market. Reach out to us when you are
+                                planning on one and we will make it a memorable affair.</p>
+                                <!-- <a href=""><i class="fas fa-times"></i> Find Out More</a> -->
                             </div>
                         </div>
 
-                        <div class="row feat-works filterDiv graphic digital promotion awards">
-                            <div class="col-md-5">
-                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRYyoffTKXkHF0AhVMZBOgZ8c8E1f-P1kxWNr2yF69Fk0i6TK5zIkITqav01yKWsA63Scc&usqp=CAU" alt="">
-                            </div>
-                            <div class="col-md-6 f-workDetails">
-                                <h4 class="keySkills">KEY SKILLS</h4>
-                                <h3 class="f-work-head">Over 15 Years Of Experiece</h3>
-                                <p class="f-work-desc">Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae
-                                    consequatur, vel illum qui
-                                    dolorem.</p>
-                                <a href=""><i class="fas fa-times"></i> Find Out More</a>
-                            </div>
-                        </div>
-
-                        <div class="row feat-works filterDiv graphic events promotion">
+                        <div class="row feat-works filterDiv vehcle">
                             <div class="col-md-5">
                                 <img src="https://www.ieee.org/content/dam/ieee-org/ieee/web/org/homecarousel/cybersecurity-lock.jpg" alt="">
                             </div>
                             <div class="col-md-6 f-workDetails">
-                                <h4 class="keySkills">KEY SKILLS</h4>
-                                <h3 class="f-work-head">Uncompromising Quality</h3>
-                                <p class="f-work-desc">Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae
-                                    consequatur, vel illum qui
-                                    dolorem.</p>
-                                <a href=""><i class="fas fa-times"></i> Find Out More</a>
+                                <!-- <h4 class="keySkills">KEY SKILLS</h4> -->
+                                <h3 class="f-work-head">Vehicle Graphics</h3>
+                                <p class="f-work-desc">Get stylish, bespoke vehicle graphics for your corporate fleet. We take pride in providing high-quality vehicle graphics
+                                and branding wraps for any type of business.</p>
+                                <!-- <a href=""><i class="fas fa-times"></i> Find Out More</a> -->
                             </div>
                         </div>
 
-                        <div class="row feat-works filterDiv graphic vehcle popups awards">
+                        <div class="row feat-works filterDiv led">
                             <div class="col-md-5">
                                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRYyoffTKXkHF0AhVMZBOgZ8c8E1f-P1kxWNr2yF69Fk0i6TK5zIkITqav01yKWsA63Scc&usqp=CAU" alt="">
                             </div>
                             <div class="col-md-6 f-workDetails">
-                                <h4 class="keySkills">KEY SKILLS</h4>
-                                <h3 class="f-work-head">Experts In Advertising</h3>
-                                <p class="f-work-desc">Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae
-                                    consequatur, vel illum qui
-                                    dolorem.</p>
-                                <a href=""><i class="fas fa-times"></i> Find Out More</a>
+                                <!-- <h4 class="keySkills">KEY SKILLS</h4> -->
+                                <h3 class="f-work-head">Led Light Displays</h3>
+                                <p class="f-work-desc">We help your brand shine and stand out. We specialize in producing high-quality, weatherproof indoor and outdoor signage
+                                solutions on a wide variety of materials.</p>
+                                <!-- <a href=""><i class="fas fa-times"></i> Find Out More</a> -->
                             </div>
                         </div>
 
-                        <div class="row feat-works filterDiv digital product">
+                        <div class="row feat-works filterDiv product">
                             <div class="col-md-5">
                                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS0FbDKptcoOGRl8AVmVP3dv2LztwRb-oUBRg&usqp=CAU" alt="">
                             </div>
                             <div class="col-md-6 f-workDetails">
-                                <h4 class="keySkills">KEY SKILLS</h4>
-                                <h3 class="f-work-head">Full Fledged Btl Advertising Firm</h3>
-                                <p class="f-work-desc">Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae
-                                    consequatur, vel illum qui
-                                    dolorem.</p>
-                                <a href=""><i class="fas fa-times"></i> Find Out More</a>
+                                <!-- <h4 class="keySkills">KEY SKILLS</h4> -->
+                                <h3 class="f-work-head">Product Displays</h3>
+                                <p class="f-work-desc">We help you get more bang from your merchandising budget. Our efforts to enhance our product display solutions have
+                                resulted in the creation of some of the best display options available on the market.</p>
+                                <!-- <a href=""><i class="fas fa-times"></i> Find Out More</a> -->
                             </div>
                         </div>
 
-                        <div class="row feat-works filterDiv vehcle led popups">
+                        <div class="row feat-works filterDiv popups">
                             <div class="col-md-5">
                                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTlm74zQGPmohhrxY9tFePTiqdbKk_RMcqkQw&usqp=CAU" alt="">
                             </div>
                             <div class="col-md-6 f-workDetails">
-                                <h4 class="keySkills">KEY SKILLS</h4>
-                                <h3 class="f-work-head">Over 15 Years Of Experiece</h3>
-                                <p class="f-work-desc">Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae
-                                    consequatur, vel illum qui
-                                    dolorem.</p>
-                                <a href=""><i class="fas fa-times"></i> Find Out More</a>
+                                <!-- <h4 class="keySkills">KEY SKILLS</h4> -->
+                                <h3 class="f-work-head">Popups & Rollups</h3>
+                                <p class="f-work-desc">Maximize your brand visibility with our signature range of popups and rollups. Designed by a team of experts, our
+                                designs come handy in grabbing the attention of your consumers.</p>
+                                <!-- <a href=""><i class="fas fa-times"></i> Find Out More</a> -->
+                            </div>
+                        </div>
+
+                        <div class="row feat-works filterDiv acrylic">
+                            <div class="col-md-5">
+                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTlm74zQGPmohhrxY9tFePTiqdbKk_RMcqkQw&usqp=CAU"
+                                    alt="">
+                            </div>
+                            <div class="col-md-6 f-workDetails">
+                                <!-- <h4 class="keySkills">KEY SKILLS</h4> -->
+                                <h3 class="f-work-head">Acrylic Displays</h3>
+                                <p class="f-work-desc">Acrylic displays are perfect for showing off your products. We offer an exhaustive range of acrylic display ideas that
+                                can be used on various surfaces.</p>
+                                <!-- <a href=""><i class="fas fa-times"></i> Find Out More</a> -->
+                            </div>
+                        </div>
+
+                        <div class="row feat-works filterDiv promotion">
+                            <div class="col-md-5">
+                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTlm74zQGPmohhrxY9tFePTiqdbKk_RMcqkQw&usqp=CAU"
+                                    alt="">
+                            </div>
+                            <div class="col-md-6 f-workDetails">
+                                <!-- <h4 class="keySkills">KEY SKILLS</h4> -->
+                                <h3 class="f-work-head">Promotion Stands</h3>
+                                <p class="f-work-desc">Stand head and shoulders above your competition. Use our modular, portable and easy-to-fix promotion stands are
+                                available in different colour combinations and design styles.</p>
+                                <!-- <a href=""><i class="fas fa-times"></i> Find Out More</a> -->
+                            </div>
+                        </div>
+
+                        <div class="row feat-works filterDiv vehcle awards">
+                            <div class="col-md-5">
+                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTlm74zQGPmohhrxY9tFePTiqdbKk_RMcqkQw&usqp=CAU"
+                                    alt="">
+                            </div>
+                            <div class="col-md-6 f-workDetails">
+                                <!-- <h4 class="keySkills">KEY SKILLS</h4> -->
+                                <h3 class="f-work-head">Awards & Plaques</h3>
+                                <p class="f-work-desc">We are a leading manufacturer and supplier of a comprehensive range of shields and plaques. Designed using premium
+                                quality material and technology, these plaques are available in various designs and sizes.</p>
+                                <!-- <a href=""><i class="fas fa-times"></i> Find Out More</a> -->
                             </div>
                         </div>
 
