--- a/projects.html
+++ b/projects.html
@@ -74,7 +74,9 @@
                             <li class="clicks" onclick="filterSelection('acrylic')">ACRYLIC DISPLAYS</li>
                             <li class="clicks" onclick="filterSelection('promotion')">PROMOTION STANDS</li>
                             <li class="clicks" onclick="filterSelection('awards')">AWARDS & PLAQUES</li>
-                        </ul>                                            
+                        </ul>  
+                        
+                        <img src="assets/img/service-img.png">
                     </div>
 
 
@@ -96,7 +98,7 @@
 
                         <div class="row feat-works filterDiv digital">
                             <div class="col-md-5">
-                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTlm74zQGPmohhrxY9tFePTiqdbKk_RMcqkQw&usqp=CAU" alt="">
+                                <img src="assets/img/service-02.png" alt="">
                             </div>
                             <div class="col-md-6 f-workDetails">
                                 <!-- <h4 class="keySkills">KEY SKILLS</h4> -->
@@ -110,7 +112,7 @@
 
                         <div class="row feat-works filterDiv events">
                             <div class="col-md-5">
-                                <img src="assets/img/banner2.jpeg" alt="">
+                                <img src="assets/img/service-03.png" alt="">
                             </div>
                             <div class="col-md-6 f-workDetails">
                                 <!-- <h4 class="keySkills">KEY SKILLS</h4> -->
@@ -123,7 +125,7 @@
 
                         <div class="row feat-works filterDiv vehcle">
                             <div class="col-md-5">
-                                <img src="https://www.ieee.org/content/dam/ieee-org/ieee/web/org/homecarousel/cybersecurity-lock.jpg" alt="">
+                                <img src="assets/img/service-04.png" alt="">
                             </div>
                             <div class="col-md-6 f-workDetails">
                                 <!-- <h4 class="keySkills">KEY SKILLS</h4> -->
@@ -136,7 +138,7 @@
 
                         <div class="row feat-works filterDiv led">
                             <div class="col-md-5">
-                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRYyoffTKXkHF0AhVMZBOgZ8c8E1f-P1kxWNr2yF69Fk0i6TK5zIkITqav01yKWsA63Scc&usqp=CAU" alt="">
+                                <img src="assets/img/service-05.png" alt="">
                             </div>
                             <div class="col-md-6 f-workDetails">
                                 <!-- <h4 class="keySkills">KEY SKILLS</h4> -->
@@ -149,7 +151,7 @@
 
                         <div class="row feat-works filterDiv product">
                             <div class="col-md-5">
-                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS0FbDKptcoOGRl8AVmVP3dv2LztwRb-oUBRg&usqp=CAU" alt="">
+                                <img src="assets/img/service-06.png" alt="">
                             </div>
                             <div class="col-md-6 f-workDetails">
                                 <!-- <h4 class="keySkills">KEY SKILLS</h4> -->
@@ -162,7 +164,7 @@
 
                         <div class="row feat-works filterDiv popups">
                             <div class="col-md-5">
-                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTlm74zQGPmohhrxY9tFePTiqdbKk_RMcqkQw&usqp=CAU" alt="">
+                                <img src="assets/img/service-07.png" alt="">
                             </div>
                             <div class="col-md-6 f-workDetails">
                                 <!-- <h4 class="keySkills">KEY SKILLS</h4> -->
@@ -175,8 +177,7 @@
 
                         <div class="row feat-works filterDiv acrylic">
                             <div class="col-md-5">
-                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTlm74zQGPmohhrxY9tFePTiqdbKk_RMcqkQw&usqp=CAU"
-                                    alt="">
+                                <img src="assets/img/service-08.png" alt="">
                             </div>
                             <div class="col-md-6 f-workDetails">
                                 <!-- <h4 class="keySkills">KEY SKILLS</h4> -->
@@ -189,8 +190,7 @@
 
                         <div class="row feat-works filterDiv promotion">
                             <div class="col-md-5">
-                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTlm74zQGPmohhrxY9tFePTiqdbKk_RMcqkQw&usqp=CAU"
-                                    alt="">
+                                <img src="assets/img/service-09.png" alt="">
                             </div>
                             <div class="col-md-6 f-workDetails">
                                 <!-- <h4 class="keySkills">KEY SKILLS</h4> -->
@@ -203,8 +203,7 @@
 
                         <div class="row feat-works filterDiv vehcle awards">
                             <div class="col-md-5">
-                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTlm74zQGPmohhrxY9tFePTiqdbKk_RMcqkQw&usqp=CAU"
-                                    alt="">
+                                <img src="assets/img/service-10.png" alt="">
                             </div>
                             <div class="col-md-6 f-workDetails">
                                 <!-- <h4 class="keySkills">KEY SKILLS</h4> -->
