--- a/clients.html
+++ b/clients.html
@@ -104,7 +104,7 @@
                             </ol>
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img class="d-block w-100" src="assets/img/img_header.png" alt="First slide">
+                                    <img class="d-block w-100" src="assets/img/client-says-banner.png" alt="First slide">
                                     <div class="carousel-caption d-none d-md-block">
                                         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore
                                             magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis
@@ -123,7 +123,7 @@
                                     </div>
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" src="assets/img/img_header.png" alt="Third slide">
+                                    <img class="d-block w-100" src="assets/img/client-says-banner.png" alt="Third slide">
                                     <div class="carousel-caption d-none d-md-block">
                                         <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore
                                             magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis
