--- a/why-das.html
+++ b/why-das.html
@@ -118,7 +118,7 @@
                             </ol>
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img class="d-block w-100" src="assets/img/img_header.png" alt="First slide">
+                                    <img class="d-block w-100" src="assets/img/banner-team.png" alt="First slide">
                                     <div class="carousel-caption d-none d-md-block">
                                         <p>Our purpose is to build long-term, mutually beneficial relationships with our clients by using our knowledge, experience
                                         and creativity to communicate their brands effectively. We bring client companies to the right audience, with the right
@@ -134,7 +134,7 @@
                                     </div>
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" src="assets/img/img_header.png" alt="Third slide">
+                                    <img class="d-block w-100" src="assets/img/banner-team.png" alt="Third slide">
                                     <div class="carousel-caption d-none d-md-block">
                                         <p>Our purpose is to build long-term, mutually beneficial relationships with our clients by using our knowledge, experience
                                         and creativity to communicate their brands effectively. We bring client companies to the right audience, with the right
@@ -164,31 +164,37 @@
                     </div>
                     <div class="col-md-4">
                         <div class="coreValueCard">
+                            <img src="assets/img/icons/icon-01.png">
                             <h3>EXPERTISE AS A SPECIALIST BTL ADVERTISING AGENCY</h3>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="coreValueCard">
+                            <img src="assets/img/icons/icon-02.png">
                             <h3>FLEXIBILITY TO HANDLE PROJECTS OR JOBS OF ANY SIZE</h3>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="coreValueCard">
+                            <img src="assets/img/icons/icon-03.png">
                             <h3>SOCIAL, COMMUNITY AND ENVIRONMENTAL RESPONSIBILITY</h3>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="coreValueCard">
+                            <img src="assets/img/icons/icon-04.png">
                             <h3>FULFILLING CLIENT NEEDS IN THE MOST EFFECTIVE MANNER</h3>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="coreValueCard">
+                            <img src="assets/img/icons/icon-05.png">
                             <h3>UNCOMPROMISING QUALITY OF OUR PRODUCTS AND SERVICES</h3>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="coreValueCard">
+                            <img src="assets/img/icons/icon-06.png">
                             <h3>UNCOMPROMISING QUALITY OF OUR PRODUCTS AND SERVICES</h3>
                         </div>
                     </div>
